Bug 127798 - Dialog "Chart Wizard" too small on iOS
Summary: Dialog "Chart Wizard" too small on iOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-26 16:28 UTC by Nicolas Christener
Modified: 2019-10-07 08:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Printscreen showing the issue (342.83 KB, image/png)
2019-09-26 16:30 UTC, Nicolas Christener
Details
Printscreen showing the issue (341.01 KB, image/png)
2019-09-26 16:31 UTC, Nicolas Christener
Details
Printscreen showing the issue (331.75 KB, image/png)
2019-09-26 16:31 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-09-26 16:28:54 UTC
Description:
In the "calc" part of the iOS app it's possible to insert a chart. However the dialog is a bit too small which leads to overlapping widgets.

I think it can mostly be fixed by "just" resizing the dialog a bit.

Steps to Reproduce:
1. Create a spreadsheet document with the iOS app
2. Insert some data and trigger the function to create a chart (insert > chart)

Actual Results:
The dialog is too small, widgets overlap.

Expected Results:
All widgets should be visible and useable with a finger.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-09-26 16:30:53 UTC
Created attachment 154556 [details]
Printscreen showing the issue
Comment 2 Nicolas Christener 2019-09-26 16:31:15 UTC
Created attachment 154557 [details]
Printscreen showing the issue
Comment 3 Nicolas Christener 2019-09-26 16:31:36 UTC
Created attachment 154558 [details]
Printscreen showing the issue
Comment 4 Xisco Faulí 2019-10-03 12:09:54 UTC
Moving to NEW as agreed in the ESC meeting
Comment 5 Nicolas Christener 2019-10-06 08:31:29 UTC
Fixed. Tested in 4.1.64.

The issue can be closed.

Thanks a lot to the Collabora team for fixing this!