tdf#127798: ios: change the default page height of the chart wizard dialog

The constant CHART_WIZARD_PAGEHEIGHT value determines the wizard
dialog size, however for a custom theme for IOS those values
have to be adjusted. After reading the WizardDialog implementation,
there is no code related about chart wizard dialog auto-size.

Change-Id: I6219d777bcc51f278ee10d834e8d0fe6c12f7918